objects/FieloCRUD__PageCustomButton__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__JSCode__c</fullName>
        <inlineHelpText>Define javascript functions that will be consumed by the “JS OnClick” button.</inlineHelpText>
        <label>JS Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__JSOnClick__c</fullName>
        <inlineHelpText>Defines the javascript code that will be executed when clicking the button. If further code is needed, define functions on “JS Code” field that can be consumed by this field.</inlineHelpText>
        <label>JS OnClick</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageLayout__c</fullName>
        <label>Page Layout</label>
        <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
        <relationshipLabel>Custom Buttons</relationshipLabel>
        <relationshipName>PageCustomButtons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SiteName__c</fullName>
        <inlineHelpText>Defines the label of the button that will be displayed in the site.</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Page Custom Button</label>
    <nameField>
        <label>Custom Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Custom Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloCRUD__PageCustomButton_NotForFormLayout</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCRUD__PageLayout__r.RecordType.DeveloperName = &apos;Form&apos;</errorConditionFormula>
        <errorMessage>You cannot create custom buttons for page layouts with Profile record type.</errorMessage>
    </validationRules>
</CustomObject>